// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Project overview Reducer should handle add project overview data  1`] = `
Object {
  "error": null,
  "event": undefined,
  "form": Object {
    "projectAdditionalDetail": Object {
      "authorizedBy": "",
      "authorizedByHop": "",
      "authorizedBySecond": "",
      "authorizedByThird": "",
      "budget": 1,
      "cdmNotifiable": false,
      "commenceDate": "2019-12-17T11:53:25.003Z",
      "comments": "",
      "completionDate": "2019-12-17T11:53:25.003Z",
      "creditCheckResult": "",
      "enquiryReceivedFrom": "",
      "enquiryTypeId": -1,
      "finalAccountDate": "2019-12-17T11:53:25.003Z",
      "firstValuationDate": "2019-12-17T11:53:25.003Z",
      "formOfContract": "",
      "insurance": "",
      "isProjectLive": false,
      "liquidatedDamages": "",
      "mainContractor": "",
      "milestones": "",
      "paymentTerms": "",
      "projectAddDetailId": "",
      "projectId": "",
      "retention": "",
      "siteAddress": "",
      "valuationIntervals": "",
      "workTypeId": -1,
    },
    "projectApprovals": Array [
      Object {
        "approvalStatus": "",
        "approverType": "",
        "projectApprovalId": "",
        "projectApprovalRange": "",
        "projectId": "",
        "userId": "",
      },
    ],
    "projectId": "",
  },
  "loading": false,
  "notify": 1,
}
`;

exports[`Project overview Reducer should handle bid lost error during change of project status  1`] = `
Object {
  "error": null,
  "event": 3,
  "form": Object {
    "projectAdditionalDetail": Object {
      "authorizedBy": "",
      "authorizedByHop": "",
      "authorizedBySecond": "",
      "authorizedByThird": "",
      "budget": 1,
      "cdmNotifiable": false,
      "commenceDate": "2019-12-17T11:53:25.003Z",
      "comments": "",
      "completionDate": "2019-12-17T11:53:25.003Z",
      "creditCheckResult": "",
      "enquiryReceivedFrom": "",
      "enquiryTypeId": -1,
      "finalAccountDate": "2019-12-17T11:53:25.003Z",
      "firstValuationDate": "2019-12-17T11:53:25.003Z",
      "formOfContract": "",
      "insurance": "",
      "isProjectLive": false,
      "liquidatedDamages": "",
      "mainContractor": "",
      "milestones": "",
      "paymentTerms": "",
      "projectAddDetailId": "",
      "projectId": "",
      "retention": "",
      "siteAddress": "",
      "valuationIntervals": "",
      "workTypeId": -1,
    },
    "projectApprovals": Array [
      Object {
        "approvalStatus": "",
        "approverType": "",
        "projectApprovalId": "",
        "projectApprovalRange": "",
        "projectId": "",
        "userId": "",
      },
    ],
    "projectId": "",
  },
  "loading": false,
  "notify": 2,
}
`;

exports[`Project overview Reducer should handle bid lost project status change event  1`] = `
Object {
  "error": null,
  "event": 3,
  "form": Object {
    "projectAdditionalDetail": Object {
      "authorizedBy": "",
      "authorizedByHop": "",
      "authorizedBySecond": "",
      "authorizedByThird": "",
      "budget": 1,
      "cdmNotifiable": false,
      "commenceDate": "2019-12-17T11:53:25.003Z",
      "comments": "",
      "completionDate": "2019-12-17T11:53:25.003Z",
      "creditCheckResult": "",
      "enquiryReceivedFrom": "",
      "enquiryTypeId": -1,
      "finalAccountDate": "2019-12-17T11:53:25.003Z",
      "firstValuationDate": "2019-12-17T11:53:25.003Z",
      "formOfContract": "",
      "insurance": "",
      "isProjectLive": false,
      "liquidatedDamages": "",
      "mainContractor": "",
      "milestones": "",
      "paymentTerms": "",
      "projectAddDetailId": "",
      "projectId": "",
      "retention": "",
      "siteAddress": "",
      "valuationIntervals": "",
      "workTypeId": -1,
    },
    "projectApprovals": Array [
      Object {
        "approvalStatus": "",
        "approverType": "",
        "projectApprovalId": "",
        "projectApprovalRange": "",
        "projectId": "",
        "userId": "",
      },
    ],
    "projectId": "",
  },
  "loading": false,
  "notify": 1,
}
`;

exports[`Project overview Reducer should handle edit  project overview data  1`] = `
Object {
  "error": null,
  "event": undefined,
  "form": Object {
    "projectAdditionalDetail": Object {
      "authorizedBy": "",
      "authorizedByHop": "",
      "authorizedBySecond": "",
      "authorizedByThird": "",
      "budget": 1,
      "cdmNotifiable": false,
      "commenceDate": "2019-12-17T11:53:25.003Z",
      "comments": "",
      "completionDate": "2019-12-17T11:53:25.003Z",
      "creditCheckResult": "",
      "enquiryReceivedFrom": "",
      "enquiryTypeId": -1,
      "finalAccountDate": "2019-12-17T11:53:25.003Z",
      "firstValuationDate": "2019-12-17T11:53:25.003Z",
      "formOfContract": "",
      "insurance": "",
      "isProjectLive": false,
      "liquidatedDamages": "",
      "mainContractor": "",
      "milestones": "",
      "paymentTerms": "",
      "projectAddDetailId": "",
      "projectId": "",
      "retention": "",
      "siteAddress": "",
      "valuationIntervals": "",
      "workTypeId": -1,
    },
    "projectApprovals": Array [
      Object {
        "approvalStatus": "",
        "approverType": "",
        "projectApprovalId": "",
        "projectApprovalRange": "",
        "projectId": "",
        "userId": "",
      },
    ],
    "projectId": "",
  },
  "loading": false,
  "notify": 1,
}
`;

exports[`Project overview Reducer should handle error while add project overview data  1`] = `
Object {
  "error": undefined,
  "event": 3,
  "form": Object {
    "projectAdditionalDetail": Object {
      "authorizedBy": "",
      "authorizedByHop": "",
      "authorizedBySecond": "",
      "authorizedByThird": "",
      "budget": 1,
      "cdmNotifiable": false,
      "commenceDate": "2019-12-17T11:53:25.003Z",
      "comments": "",
      "completionDate": "2019-12-17T11:53:25.003Z",
      "creditCheckResult": "",
      "enquiryReceivedFrom": "",
      "enquiryTypeId": -1,
      "finalAccountDate": "2019-12-17T11:53:25.003Z",
      "firstValuationDate": "2019-12-17T11:53:25.003Z",
      "formOfContract": "",
      "insurance": "",
      "isProjectLive": false,
      "liquidatedDamages": "",
      "mainContractor": "",
      "milestones": "",
      "paymentTerms": "",
      "projectAddDetailId": "",
      "projectId": "",
      "retention": "",
      "siteAddress": "",
      "valuationIntervals": "",
      "workTypeId": -1,
    },
    "projectApprovals": Array [
      Object {
        "approvalStatus": "",
        "approverType": "",
        "projectApprovalId": "",
        "projectApprovalRange": "",
        "projectId": "",
        "userId": "",
      },
    ],
    "projectId": "",
  },
  "loading": false,
  "notify": 2,
}
`;

exports[`Project overview Reducer should handle on hold error during change of project status  1`] = `
Object {
  "error": null,
  "event": 3,
  "form": Object {
    "projectAdditionalDetail": Object {
      "authorizedBy": "",
      "authorizedByHop": "",
      "authorizedBySecond": "",
      "authorizedByThird": "",
      "budget": 1,
      "cdmNotifiable": false,
      "commenceDate": "2019-12-17T11:53:25.003Z",
      "comments": "",
      "completionDate": "2019-12-17T11:53:25.003Z",
      "creditCheckResult": "",
      "enquiryReceivedFrom": "",
      "enquiryTypeId": -1,
      "finalAccountDate": "2019-12-17T11:53:25.003Z",
      "firstValuationDate": "2019-12-17T11:53:25.003Z",
      "formOfContract": "",
      "insurance": "",
      "isProjectLive": false,
      "liquidatedDamages": "",
      "mainContractor": "",
      "milestones": "",
      "paymentTerms": "",
      "projectAddDetailId": "",
      "projectId": "",
      "retention": "",
      "siteAddress": "",
      "valuationIntervals": "",
      "workTypeId": -1,
    },
    "projectApprovals": Array [
      Object {
        "approvalStatus": "",
        "approverType": "",
        "projectApprovalId": "",
        "projectApprovalRange": "",
        "projectId": "",
        "userId": "",
      },
    ],
    "projectId": "",
  },
  "loading": false,
  "notify": 2,
}
`;

exports[`Project overview Reducer should handle on hold project status change event  1`] = `
Object {
  "error": null,
  "event": 3,
  "form": Object {
    "projectAdditionalDetail": Object {
      "authorizedBy": "",
      "authorizedByHop": "",
      "authorizedBySecond": "",
      "authorizedByThird": "",
      "budget": 1,
      "cdmNotifiable": false,
      "commenceDate": "2019-12-17T11:53:25.003Z",
      "comments": "",
      "completionDate": "2019-12-17T11:53:25.003Z",
      "creditCheckResult": "",
      "enquiryReceivedFrom": "",
      "enquiryTypeId": -1,
      "finalAccountDate": "2019-12-17T11:53:25.003Z",
      "firstValuationDate": "2019-12-17T11:53:25.003Z",
      "formOfContract": "",
      "insurance": "",
      "isProjectLive": false,
      "liquidatedDamages": "",
      "mainContractor": "",
      "milestones": "",
      "paymentTerms": "",
      "projectAddDetailId": "",
      "projectId": "",
      "retention": "",
      "siteAddress": "",
      "valuationIntervals": "",
      "workTypeId": -1,
    },
    "projectApprovals": Array [
      Object {
        "approvalStatus": "",
        "approverType": "",
        "projectApprovalId": "",
        "projectApprovalRange": "",
        "projectId": "",
        "userId": "",
      },
    ],
    "projectId": "",
  },
  "loading": false,
  "notify": 1,
}
`;

exports[`Project overview Reducer should handle reactivate error event  1`] = `
Object {
  "error": null,
  "event": 3,
  "form": Object {
    "projectAdditionalDetail": Object {
      "authorizedBy": "",
      "authorizedByHop": "",
      "authorizedBySecond": "",
      "authorizedByThird": "",
      "budget": 1,
      "cdmNotifiable": false,
      "commenceDate": "2019-12-17T11:53:25.003Z",
      "comments": "",
      "completionDate": "2019-12-17T11:53:25.003Z",
      "creditCheckResult": "",
      "enquiryReceivedFrom": "",
      "enquiryTypeId": -1,
      "finalAccountDate": "2019-12-17T11:53:25.003Z",
      "firstValuationDate": "2019-12-17T11:53:25.003Z",
      "formOfContract": "",
      "insurance": "",
      "isProjectLive": false,
      "liquidatedDamages": "",
      "mainContractor": "",
      "milestones": "",
      "paymentTerms": "",
      "projectAddDetailId": "",
      "projectId": "",
      "retention": "",
      "siteAddress": "",
      "valuationIntervals": "",
      "workTypeId": -1,
    },
    "projectApprovals": Array [
      Object {
        "approvalStatus": "",
        "approverType": "",
        "projectApprovalId": "",
        "projectApprovalRange": "",
        "projectId": "",
        "userId": "",
      },
    ],
    "projectId": "",
  },
  "loading": false,
  "notify": 2,
}
`;

exports[`Project overview Reducer should handle reactivate project event  1`] = `
Object {
  "error": null,
  "event": 0,
  "form": Object {
    "projectAdditionalDetail": Object {
      "authorizedBy": "",
      "authorizedByHop": "",
      "authorizedBySecond": "",
      "authorizedByThird": "",
      "budget": 1,
      "cdmNotifiable": false,
      "commenceDate": "2019-12-17T11:53:25.003Z",
      "comments": "",
      "completionDate": "2019-12-17T11:53:25.003Z",
      "creditCheckResult": "",
      "enquiryReceivedFrom": "",
      "enquiryTypeId": -1,
      "finalAccountDate": "2019-12-17T11:53:25.003Z",
      "firstValuationDate": "2019-12-17T11:53:25.003Z",
      "formOfContract": "",
      "insurance": "",
      "isProjectLive": false,
      "liquidatedDamages": "",
      "mainContractor": "",
      "milestones": "",
      "paymentTerms": "",
      "projectAddDetailId": "",
      "projectId": "",
      "retention": "",
      "siteAddress": "",
      "valuationIntervals": "",
      "workTypeId": -1,
    },
    "projectApprovals": Array [
      Object {
        "approvalStatus": "",
        "approverType": "",
        "projectApprovalId": "",
        "projectApprovalRange": "",
        "projectId": "",
        "userId": "",
      },
    ],
    "projectId": "",
  },
  "loading": false,
  "notify": 1,
}
`;
